--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ function(create_executable app_name file_name)
   add_executable(${app_name} ${file_name})
 
   target_link_libraries(${app_name} PUBLIC raisim::raisimOgre)
+  target_link_libraries(${app_name} PUBLIC ifopt::ifopt_ipopt) 
+  target_link_libraries(${app_name} PUBLIC towr::towr) # adds include directories and libraries
+
   
   target_include_directories(${app_name} PUBLIC 
   ${CMAKE_CURRENT_SOURCE_DIR}/include ${EIGEN3_INCLUDE_DIRS})
@@ -23,11 +26,10 @@ endfunction()
 
 
 
-add_executable(towr_monoped towr_monoped.cpp) # Your custom variables, costs and constraints added to TOWR
+#add_executable(towr_monoped towr_monoped.cpp) # Your custom variables, costs and constraints added to TOWR
 
+#target_link_libraries(towr_monoped PUBLIC ifopt::ifopt_ipopt) 
+#target_link_libraries(towr_monoped PUBLIC towr::towr) # adds include directories and libraries
 
-target_link_libraries(towr_monoped PUBLIC ifopt::ifopt_ipopt) 
-target_link_libraries(towr_monoped PUBLIC towr::towr) # adds include directories and libraries
-
-create_executable(monoped_raisim monoped_raisim.cpp)
-
+#create_executable(raisim_ik monoped_raisim_ik.cpp)
+create_executable(towr_raisim monoped_towr_raisim_ik.cpp)
