ik solver prints gen force

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,5 +31,5 @@ endfunction()
 #target_link_libraries(towr_monoped PUBLIC ifopt::ifopt_ipopt) 
 #target_link_libraries(towr_monoped PUBLIC towr::towr) # adds include directories and libraries
 
-#create_executable(raisim_ik monoped_raisim_ik.cpp)
-create_executable(towr_raisim monoped_towr_raisim_ik_2.cpp)
+create_executable(raisim_ik monoped_raisim_ik2.cpp)
+#create_executable(towr_raisim monoped_towr_raisim_ik_2.cpp)
