--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,8 @@ endfunction()
 #target_link_libraries(towr_monoped PUBLIC towr::towr) # adds include directories and libraries
 
 #create_executable(raisim_ik monoped_raisim_ik.cpp)
-create_executable(towr_raisim monoped_towr_raisim_ik_2.cpp)
-create_executable(ik_test ik_test.cpp)
+#create_executable(towr_raisim monoped_towr_raisim_ik_2.cpp)
+#create_executable(ik_test ik_test.cpp)
+# create_executable(raibert_controller raiberts_controller.cpp)
+create_executable(leg leg.cpp)
 
