Force tracker with genralized base/hip transformation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ endfunction()
 
 
 
+#create_executable(towr_monoped towr_monoped.cpp)
+#create_executable(towr_raisim monoped_towr_raisim_plot.cpp)
 
-create_executable(towr_raisim monoped_towr_raisim_plot.cpp)
-
+create_executable(force_tracker monoped_towr_force_tracker.cpp)
